commit 10/06/2024 finalizado el helper